--- a/Test.App/pom.xml
+++ b/Test.App/pom.xml
@@ -1,6 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.ibm.ace</groupId>
+	<groupId>com.ibm.esb</groupId>
 	<artifactId>Test.App</artifactId>
 	<version>1.0.26-SNAPSHOT</version>
 	<packaging>ace-bar</packaging>
@@ -74,7 +74,7 @@
 	</distributionManagement>
 	<scm>
 		<url>git@github.com:awasthan/Test.App.git</url>
-		<connection>scm:git:git@github.com:awasthan/Test.App.git</connection>
+		<connection>scm:git:git@github.com:afroz11031/Test.App.git</connection>
 	  <tag>HEAD</tag>
   </scm>	
 </project>
