--- a/Test.App/pom.xml
+++ b/Test.App/pom.xml
@@ -73,7 +73,7 @@
 		
 	</distributionManagement>
 	<scm>
-		<url>git@github.com:awasthan/Test.App.git</url>
+		<url>git@github.com:afroz11031/Test.App.git</url>
 		<connection>scm:git:git@github.com:afroz11031/Test.App.git</connection>
 	  <tag>HEAD</tag>
   </scm>	
